--- a/src/dungeon.cqrs.core/dungeon.cqrs.core.csproj
+++ b/src/dungeon.cqrs.core/dungeon.cqrs.core.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    
+    <PackageId>dungeon_cqrs.core</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Daniel Domurad</Authors>
   </PropertyGroup>
 
 </Project>
