--- a/src/dungeon.cqrs.implementation/dungeon.cqrs.implementation.csproj
+++ b/src/dungeon.cqrs.implementation/dungeon.cqrs.implementation.csproj
@@ -1,11 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\dungeon.cqrs.core\dungeon.cqrs.core.csproj" />
+    <ProjectReference Include="..\..\src\dungeon.cqrs.core\dungeon.cqrs.core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
   </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+
+    <PackageId>dungeon_cqrs.impl</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>Daniel Domurad</Authors>
+    
   </PropertyGroup>
 </Project>
