--- a/src/dungeon.cqrs.implementation/dungeon.cqrs.implementation.csproj
+++ b/src/dungeon.cqrs.implementation/dungeon.cqrs.implementation.csproj
@@ -4,13 +4,15 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    
   </ItemGroup>
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
 
     <PackageId>dungeon_cqrs.impl</PackageId>
-    <Version>1.0.1</Version>
+    <Version>1.2.0</Version>
     <Authors>Daniel Domurad</Authors>
     
   </PropertyGroup>
